--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@ import profilePicture from "@assets/me-with-roxy.jpg";
 
 <section>
   <div class="flex">
-    <div class="group mr-3 flex items-center sm:mr-6">
+    <div class="group mr-3 flex items-center sm:mr-5">
       <div
         class="avatar relative inline-flex h-12 w-12 items-center justify-center overflow-hidden rounded-xl"
       >
@@ -36,13 +36,14 @@ import profilePicture from "@assets/me-with-roxy.jpg";
     <div class="grid">
       <h1 class="text-2xl font-semibold">Trevor Lee</h1>
       <span class="text-sm text-textVariant"
-        >Front-end Developer · Vancouver, Canada</span
+        >Front-end Developer ◦ Vancouver, Canada</span
       >
     </div>
   </div>
   <span class="mt-4 block text-textVariant"
     >Building websites with React and Node.js since 2020. Passionate about
-    interface design and crafting detailed, accessible experiences on the web.
+    designing interfaces and crafting detailed, accessible experiences on the
+    web.
   </span>
 </section>
 <section class="mt-12">
