--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -177,14 +177,13 @@ if (pageTitle === "Trevor Lee | Homepage") {
     >
       <nav class="mb-16 w-full py-4">
         <div class="flex items-center justify-between">
-          <div class="">
-            <a href="/">
-              <Icon
-                name="home"
-                class="size-[40px] text-textVariant transition-colors hover:text-text focus-visible:text-text sm:size-[32px]"
-              />
-            </a>
-            <!-- {
+          <a
+            href="/"
+            class="cursor-default rounded bg-white p-1 text-xs font-semibold text-neutral-900 shadow ring-1 ring-inset ring-neutral-950/15 hover:ring-neutral-950/25 focus-visible:ring-neutral-950/25 dark:bg-white/10 dark:text-white dark:shadow-sm dark:ring-white/15 dark:hover:ring-white/25 dark:focus-visible:ring-white/25"
+          >
+            <Icon name="home" class="size-[24px]" />
+          </a>
+          <!-- {
               !onIndex && (
                 <Breadcrumbs
                   pageTitle={pageTitle}
@@ -193,7 +192,6 @@ if (pageTitle === "Trevor Lee | Homepage") {
                 />
               )
             } -->
-          </div>
           <ThemeToggle client:load />
         </div>
       </nav>
