fix home button size on mobile, minor edits

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -25,7 +25,6 @@ import profilePicture from "@assets/me-with-roxy.jpg";
           loading="eager"
           draggable="false"
         />
-        <span class="sr-only">Home page</span>
         <div
           class="avatar absolute inset-0 flex h-full w-full justify-center [transform:skew(-12deg)_translateX(-100%)] group-hover:duration-500 group-hover:[transform:skew(-12deg)_translateX(100%)]"
         >
@@ -36,7 +35,7 @@ import profilePicture from "@assets/me-with-roxy.jpg";
     <div class="grid">
       <h1 class="text-2xl font-semibold">Trevor Lee</h1>
       <span class="text-sm text-textVariant"
-        >Front-end Developer ◦ Vancouver, Canada</span
+        >Frontend Developer <span class="text-lg">⋆</span> Vancouver, Canada</span
       >
     </div>
   </div>
