--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -179,9 +179,9 @@ if (pageTitle === "Trevor Lee | Homepage") {
         <div class="flex items-center justify-between">
           <a
             href="/"
-            class="cursor-default rounded bg-white p-1 text-xs font-semibold text-neutral-900 shadow ring-1 ring-inset ring-neutral-950/15 hover:ring-neutral-950/25 focus-visible:ring-neutral-950/25 dark:bg-white/10 dark:text-white dark:shadow-sm dark:ring-white/15 dark:hover:ring-white/25 dark:focus-visible:ring-white/25"
+            class="cursor-default rounded bg-white p-2 text-xs font-semibold text-neutral-900 shadow ring-1 ring-inset ring-neutral-950/15 hover:ring-neutral-950/25 focus-visible:ring-neutral-950/25 dark:bg-white/10 dark:text-white dark:shadow-sm dark:ring-white/15 dark:hover:ring-white/25 dark:focus-visible:ring-white/25 sm:p-1"
           >
-            <Icon name="home" class="size-[24px]" />
+            <Icon name="home" class="size-6" />
           </a>
           <!-- {
               !onIndex && (
