--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,7 +4,7 @@ import BaseLayout from "src/layouts/BaseLayout.astro";
 const pageTitle = "uh oh";
 ---
 
-<BaseLayout pageTitle={pageTitle}>
+<BaseLayout pageTitle={pageTitle} category="404">
   <div class="my-36 grid h-24 justify-center text-center">
     <img
       class="mx-auto mb-4"
