--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -175,25 +175,26 @@ if (pageTitle === "Trevor Lee | Homepage") {
     <div
       class=`bg-centerBackground dark:bg-centerBackground/90 text-text ${fullWidth ? "" : "px-4"} m-auto max-w-[640px]`
     >
-      <nav class="mb-16 w-full py-4">
+      <nav class="mb-16 flex w-full flex-col gap-6 py-4">
         <div class="flex items-center justify-between">
           <a
             href="/"
             class="cursor-default rounded bg-white p-2 text-xs font-semibold text-neutral-900 shadow ring-1 ring-inset ring-neutral-950/15 hover:ring-neutral-950/25 focus-visible:ring-neutral-950/25 dark:bg-white/10 dark:text-white dark:shadow-sm dark:ring-white/15 dark:hover:ring-white/25 dark:focus-visible:ring-white/25 sm:p-1"
+            aria-label="Homepage"
           >
             <Icon name="home" class="size-6" />
           </a>
-          <!-- {
-              !onIndex && (
-                <Breadcrumbs
-                  pageTitle={pageTitle}
-                  category={category}
-                  pageSlug={pageSlug}
-                />
-              )
-            } -->
           <ThemeToggle client:load />
         </div>
+        {
+          !onIndex && (
+            <Breadcrumbs
+              pageTitle={pageTitle}
+              category={category}
+              pageSlug={pageSlug}
+            />
+          )
+        }
       </nav>
       <main>
         <slot />
