cleanup and minor improvements + delete depracated components

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,8 +1,9 @@
 ---
-import "../styles/global.css";
-import "../styles/preflight.css";
+import "@/styles/preflight.css";
+import "@/styles/global.css";
 
 import { ViewTransitions } from "astro:transitions";
+import { Icon } from "astro-icon/components";
 
 import "@fontsource/geist-sans/400.css";
 import "@fontsource/geist-sans/500.css";
@@ -12,8 +13,6 @@ import "@fontsource/geist-sans/800.css";
 import "@fontsource/geist-sans/900.css";
 import "@fontsource/geist-mono/400.css";
 import "@fontsource/geist-mono/700.css";
-
-import { Icon } from "astro-icon/components";
 
 import Breadcrumbs from "@components/Breadcrumbs.astro";
 import Footer from "@components/Footer.astro";
