--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const pageTitle = "Trevor Lee | Homepage";
     <ul class="">
       <Project
         description="Blog theme for Astro with search, comments, and zero frameworks."
-        href="https://astro-micro.vercel.app/"
+        href="https://astro.build/themes/details/astro-micro/"
         title="Astro Micro 🔬"
       />
       <Project
