Simplify page titles, minor styling

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,7 +21,7 @@ import ThemeToggle from "@components/ThemeToggle.tsx";
 const { pageTitle, pageSlug, category, fullWidth } = Astro.props;
 
 let onIndex = false;
-if (pageTitle === "Trevor Lee | Homepage") {
+if (pageTitle === "Trevor Tyler Lee") {
   onIndex = true;
 }
 ---
