--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ const formattedPosts = formatBlogPost(allPosts, {
   limit: 5,
 });
 
-const pageTitle = "Trevor Lee | Homepage";
+const pageTitle = "Trevor Tyler Lee";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
