--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -67,6 +67,8 @@ const { Content } = await post.render();
     --tw-prose-headings: rgb(var(--text));
     --tw-prose-quotes: rgb(var(--text));
     --tw-prose-bold: rgb(var(--text));
+    --tw-prose-kbd: rgb(var(--text));
+    --tw-prose-kbd-shadows: 125 125 125;
   }
 </style>
 
