--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -14,7 +14,7 @@ export async function getStaticPaths({ paginate }) {
   });
 }
 
-const pageTitle = "Trevor Lee | All Posts";
+const pageTitle = "Posts";
 
 const { page } = Astro.props as any;
 ---
