--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -46,6 +46,15 @@ const socials = [
     icon: "twitter",
   },
 ];
+
+const colorVariants = {
+  mail: "text-blue-4",
+  phone: "text-green-5",
+  github: "text-text",
+  linkedin: "",
+  instagram: "text-[#F07]",
+  twitter: "text-sky-500",
+};
 ---
 
 <section>
@@ -90,7 +99,7 @@ const socials = [
       socials.map(({ label, details, href, icon }) => (
         <>
           <DescriptionTerm className="flex items-center gap-1 sm:gap-2">
-            <Icon name={icon} />
+            <Icon name={icon} class={colorVariants[icon]} />
             {label}
           </DescriptionTerm>
           <DescriptionDetails className="flex items-center gap-1">
