--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -168,87 +168,88 @@ if (pageTitle === "Trevor Tyler Lee") {
   </head>
   <body class="bg-backdrop">
     <div
-      class="pointer-events-none absolute inset-0 -z-10 h-full w-full bg-white bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px] dark:invisible"
+      class="inset-0 -z-10 h-full w-full bg-white bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px] dark:invisible"
     >
-    </div>
-    <div
-      class=`bg-centerBackground dark:bg-centerBackground/90 text-text ${fullWidth ? "" : "px-4"} m-auto max-w-[640px]`
-    >
-      <nav class="mb-16 flex w-full flex-col gap-6 py-4">
-        <div class="flex items-center justify-between">
-          <a
-            href="/"
-            class="cursor-default rounded bg-white p-2 text-xs font-semibold text-neutral-900 shadow-sm ring-1 ring-inset ring-neutral-950/15 hover:ring-neutral-950/25 focus-visible:ring-neutral-950/25 dark:bg-white/5 dark:text-white dark:ring-white/15 dark:hover:ring-white/25 dark:focus-visible:ring-white/25 sm:p-1"
-            aria-label="Homepage"
-          >
-            <Icon name="home" class="size-6" />
-          </a>
-          <ThemeToggle client:load />
-        </div>
-        {
-          !onIndex && (
-            <Breadcrumbs
-              pageTitle={pageTitle}
-              category={category}
-              pageSlug={pageSlug}
-            />
-          )
+      <div
+        class=`dark:visible bg-centerBackground dark:bg-centerBackground/90 text-text ${fullWidth ? "" : "px-4"} m-auto max-w-[640px]`
+      >
+        <nav class="mb-16 flex w-full flex-col gap-6 py-4">
+          <div class="flex items-center justify-between">
+            <a
+              href="/"
+              class="cursor-default rounded bg-white p-2 text-xs font-semibold text-neutral-900 shadow-sm ring-1 ring-inset ring-neutral-950/15 hover:ring-neutral-950/25 focus-visible:ring-neutral-950/25 dark:bg-white/5 dark:text-white dark:ring-white/15 dark:hover:ring-white/25 dark:focus-visible:ring-white/25 sm:p-1"
+              aria-label="Homepage"
+            >
+              <Icon name="home" class="size-6" />
+            </a>
+            <ThemeToggle client:load />
+          </div>
+          {
+            !onIndex && (
+              <Breadcrumbs
+                pageTitle={pageTitle}
+                category={category}
+                pageSlug={pageSlug}
+              />
+            )
+          }
+        </nav>
+        <main>
+          <slot />
+        </main>
+        <Footer />
+      </div>
+      <style>
+        body {
+          background: rgb(var(--background));
+          background-repeat: repeat;
         }
-      </nav>
-      <main>
-        <slot />
-      </main>
-      <Footer />
-    </div>
-    <style>
-      body {
-        background: rgb(var(--background));
-        background-repeat: repeat;
-      }
 
-      .dark body {
-        background: black;
-      }
-
-      @media screen and (prefers-reduced-motion: no-preference) {
-        /* https://maya.land/ */
         .dark body {
-          background-image: url("/star.gif");
+          background: black;
         }
-      }
-    </style>
 
-    <script>
-      // @ts-ignore
-      const select: HTMLSelectElement = document.querySelector("#theme-toggle");
-      const mediaQuery = window.matchMedia("(prefers-color-scheme: dark)");
-      mediaQuery.addEventListener("change", (e) => {
-        if (select.value === "auto") {
-          if (e.matches) {
-            document.documentElement.classList.remove("light");
-            document.documentElement.classList.add("dark");
-          } else {
-            document.documentElement.classList.remove("dark");
-            document.documentElement.classList.add("light");
+        @media screen and (prefers-reduced-motion: no-preference) {
+          /* https://maya.land/ */
+          .dark body {
+            background-image: url("/star.gif");
           }
         }
-      });
-    </script>
-    <noscript>
+      </style>
+
+      <script>
+        // @ts-ignore
+        const select: HTMLSelectElement =
+          document.querySelector("#theme-toggle");
+        const mediaQuery = window.matchMedia("(prefers-color-scheme: dark)");
+        mediaQuery.addEventListener("change", (e) => {
+          if (select.value === "auto") {
+            if (e.matches) {
+              document.documentElement.classList.remove("light");
+              document.documentElement.classList.add("dark");
+            } else {
+              document.documentElement.classList.remove("dark");
+              document.documentElement.classList.add("light");
+            }
+          }
+        });
+      </script>
+      <noscript>
+        <style>
+          .animate-up,
+          .animate-down {
+            opacity: 1 !important;
+            transform: translateY(0) !important;
+            filter: none !important;
+          }
+        </style>
+      </noscript>
       <style>
-        .animate-up,
-        .animate-down {
-          opacity: 1 !important;
-          transform: translateY(0) !important;
-          filter: none !important;
+        .avatar {
+          mask-image: url("/mask.svg");
+          -webkit-mask-image: url("/mask.svg");
         }
       </style>
-    </noscript>
-    <style>
-      .avatar {
-        mask-image: url("/mask.svg");
-        -webkit-mask-image: url("/mask.svg");
-      }
-    </style>
+    </div>
   </body>
 </html>
