--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@ import {
   DescriptionList,
   DescriptionTerm,
 } from "@components/ui/description-list";
-import profilePicture from "@assets/me-with-roxy.jpg";
+import profilePicture from "@assets/me-and-roxy.png";
 
 const socials = [
   {
@@ -59,9 +59,9 @@ const colorVariants = {
 
 <section>
   <div class="flex">
-    <div class="group mr-3 flex items-center sm:mr-5">
+    <div class="group mr-2 flex items-center">
       <div
-        class="avatar relative inline-flex h-12 w-12 items-center justify-center overflow-hidden rounded-xl"
+        class="avatar relative inline-flex h-16 w-16 items-center justify-center overflow-hidden rounded-xl"
       >
         <Image
           src={profilePicture}
@@ -81,8 +81,8 @@ const colorVariants = {
       </div>
     </div>
     <div class="grid">
-      <h1 class="text-2xl font-semibold">Trevor Lee</h1>
-      <span class="text-sm text-textVariant"
+      <h1 class="mt-1 text-3xl font-semibold">Trevor Lee</h1>
+      <span class="-mt-3 text-sm text-textVariant"
         >Frontend Developer <span class="text-lg">⋆</span> Vancouver, Canada</span
       >
     </div>
