--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -59,9 +59,9 @@ const colorVariants = {
 
 <section>
   <div class="flex">
-    <div class="group mr-2 flex items-center">
+    <div class="group mr-2 flex items-center sm:mr-3">
       <div
-        class="avatar relative inline-flex h-16 w-16 items-center justify-center overflow-hidden rounded-xl"
+        class="avatar relative inline-flex h-12 w-12 items-center justify-center overflow-hidden rounded-xl"
       >
         <Image
           src={profilePicture}
