--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -81,8 +81,8 @@ const colorVariants = {
       </div>
     </div>
     <div class="grid">
-      <h1 class="mt-1 text-3xl font-semibold">Trevor Lee</h1>
-      <span class="-mt-3 text-sm text-textVariant"
+      <h1 class="text-3xl font-semibold">Trevor Lee</h1>
+      <span class="-mt-2 text-sm text-textVariant"
         >Frontend Developer <span class="text-lg">⋆</span> Vancouver, Canada</span
       >
     </div>
