make umami script async

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -147,6 +147,7 @@ if (pageTitle === "Trevor Tyler Lee") {
       init();
     </script>
     <script
+      async
       is:inline
       src="https://analytics.us.umami.is/script.js"
       data-website-id="db9f8fea-3974-458c-8aeb-27c9461841e4"></script>
