minor style changes, remove blurb

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -48,7 +48,7 @@ const socials = [
 ];
 
 const colorVariants = {
-  mail: "text-blue-4",
+  mail: "text-orange-6",
   phone: "text-green-5",
   github: "text-text",
   linkedin: "",
@@ -74,24 +74,19 @@ const colorVariants = {
           draggable="false"
         />
         <div
-          class="avatar absolute inset-0 flex h-full w-full justify-center [transform:skew(-12deg)_translateX(-100%)] group-hover:duration-500 group-hover:[transform:skew(-12deg)_translateX(100%)]"
+          class="avatar absolute inset-0 flex h-full w-full justify-center delay-200 [transform:skew(-12deg)_translateX(-100%)] group-hover:duration-500 group-hover:[transform:skew(-12deg)_translateX(100%)]"
         >
           <div class="relative h-full w-8 bg-white/20"></div>
         </div>
       </div>
     </div>
     <div class="grid">
-      <h1 class="text-3xl font-semibold">Trevor Lee</h1>
+      <h1 class="text-lg font-medium">Trevor Lee</h1>
       <span class="-mt-2 text-sm text-textVariant"
         >Frontend Developer <span class="text-lg">⋆</span> Vancouver, Canada</span
       >
     </div>
   </div>
-  <span class="mt-4 block text-textVariant"
-    >Building websites with React and Node.js since 2020. Passionate about
-    designing interfaces and crafting detailed, accessible experiences on the
-    web.
-  </span>
 </section>
 <section class="mt-12">
   <DescriptionList>
