minor style changes

--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -54,7 +54,7 @@ const { Content } = await post.render();
     </div>
     <div
       id="content"
-      class="prose prose-sm prose-neutral mx-auto mb-12 mt-8 underline-offset-[3px] sm:prose-base prose-headings:font-semibold"
+      class="prose prose-sm prose-neutral mb-12 mt-8 max-w-screen-sm underline-offset-[3px] sm:prose-base prose-headings:font-semibold"
     >
       <Content />
     </div>
