--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -172,7 +172,7 @@ if (pageTitle === "Trevor Tyler Lee") {
       class="inset-0 -z-10 h-full w-full bg-white bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px] dark:invisible"
     >
       <div
-        class=`dark:visible bg-centerBackground dark:bg-centerBackground/90 text-text ${fullWidth ? "" : "px-4"} m-auto max-w-[640px]`
+        class=`dark:visible bg-centerBackground dark:bg-centerBackground/90 text-text ${fullWidth ? "" : "px-4 sm:px-0"} m-auto max-w-screen-sm`
       >
         <nav class="mb-16 flex w-full flex-col gap-6 py-4">
           <div class="flex items-center justify-between">
