--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -76,6 +76,7 @@ const { Content } = await post.render();
     --tw-prose-bold: rgb(var(--text));
     --tw-prose-kbd: rgb(var(--text));
     --tw-prose-kbd-shadows: 125 125 125;
+    --tw-prose-hr: rgb(40 40 40 / 0.25);
   }
 </style>
 
