--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -178,10 +178,13 @@ if (pageTitle === "Trevor Tyler Lee") {
           <div class="flex items-center justify-between">
             <a
               href="/"
-              class="cursor-default rounded bg-white p-2 text-xs font-semibold text-neutral-900 shadow-sm ring-1 ring-inset ring-neutral-950/15 hover:ring-neutral-950/25 focus-visible:ring-neutral-950/25 dark:bg-white/5 dark:text-white dark:ring-white/15 dark:hover:ring-white/25 dark:focus-visible:ring-white/25 sm:p-1"
+              class="group cursor-default rounded bg-white p-2 text-xs font-semibold text-neutral-900 shadow-sm ring-1 ring-inset ring-neutral-950/15 hover:ring-neutral-950/25 focus-visible:ring-neutral-950/25 dark:bg-white/5 dark:text-white dark:ring-white/15 dark:hover:ring-white/25 dark:focus-visible:ring-white/25 sm:p-1"
               aria-label="Homepage"
             >
-              <Icon name="home" class="size-6" />
+              <Icon
+                name="home"
+                class="size-6 text-textVariant transition-colors group-hover:text-text group-focus-visible:text-text"
+              />
             </a>
             <ThemeToggle client:load />
           </div>
