--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,6 +16,7 @@ import "@fontsource/geist-mono/700.css";
 
 import Breadcrumbs from "@components/Breadcrumbs.astro";
 import Footer from "@components/Footer.astro";
+import Marquee from "@/components/Marquee.astro";
 import ThemeToggle from "@components/ThemeToggle.tsx";
 
 const { pageTitle, pageSlug, category, fullWidth } = Astro.props;
@@ -172,13 +173,13 @@ if (pageTitle === "Trevor Tyler Lee") {
       class="inset-0 -z-10 h-full w-full bg-white bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px] dark:invisible"
     >
       <div
-        class=`dark:visible bg-centerBackground dark:bg-centerBackground/90 text-text ${fullWidth ? "" : "px-4 sm:px-0"} m-auto max-w-screen-sm`
+        class=`dark:visible bg-centerBackground dark:bg-centerBackground/90 text-text ${fullWidth ? "" : "px-4 sm:px-0"} m-auto max-w-screen-sm min-h-screen`
       >
         <nav class="mb-16 flex w-full flex-col gap-6 py-4">
           <div class="flex items-center justify-between">
             <a
               href="/"
-              class="group cursor-default rounded bg-white p-2 text-xs font-semibold text-neutral-900 shadow-sm ring-1 ring-inset ring-neutral-950/15 hover:ring-neutral-950/25 focus-visible:ring-neutral-950/25 dark:bg-white/5 dark:text-white dark:ring-white/15 dark:hover:ring-white/25 dark:focus-visible:ring-white/25 sm:p-1"
+              class="group cursor-default rounded bg-white p-2 text-xs font-semibold text-neutral-900 shadow-sm ring-1 ring-inset ring-neutral-950/15 hover:ring-neutral-950/25 focus-visible:ring-neutral-950/25 dark:bg-white/5 dark:text-white dark:ring-white/10 dark:hover:ring-white/25 dark:focus-visible:ring-white/25 sm:p-1"
               aria-label="Homepage"
             >
               <Icon
@@ -255,5 +256,6 @@ if (pageTitle === "Trevor Tyler Lee") {
         }
       </style>
     </div>
+    <Marquee />
   </body>
 </html>
