--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -1,6 +1,8 @@
 <div class="marquee">
-  <div class="track bg-[#0000FF] text-white">
-    <div class="content font-mono text-xs">
+  <div class="track bg-[#0000FF]">
+    <div
+      class="content pointer-events-none select-none font-mono text-xs text-white no-underline"
+    >
       01110100 01110100 01101100 00001010 ∙ 74 74 6c ∙ - - .-.. ∙ 164 164 154 ∙
       tlt ∙ 01110100 01110100 01101100 00001010 ∙ 74 74 6c ∙ - - .-.. ∙ 164 164
       154 ∙ tlt ∙ 01110100 01110100 01101100 00001010 ∙ 74 74 6c ∙ - - .-.. ∙
