--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -81,7 +81,7 @@ const colorVariants = {
       </div>
     </div>
     <div class="grid">
-      <h1 class="text-lg font-medium">Trevor Lee</h1>
+      <h1 class="text-lg font-medium">Trevor Tyler Lee</h1>
       <span class="-mt-2 text-sm text-textVariant"
         >Frontend Developer <span class="text-lg">⋆</span> Vancouver, Canada</span
       >
