--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ const pageTitle = "Trevor Tyler Lee";
       <a
         href="/posts"
         class="group flex h-[40px] cursor-default items-center gap-1 rounded-lg bg-white px-3 py-2 text-base/6 text-sm text-text no-underline shadow-sm ring-1 ring-inset ring-neutral-950/15 hover:ring-neutral-950/25 focus-visible:ring-neutral-950/25 dark:bg-white/5 dark:ring-white/10 dark:hover:ring-white/25 dark:focus-visible:ring-white/25 sm:h-[32px] sm:py-1"
-        >See more
+        >View all posts
         <Icon
           name="arrow-right"
           class="text-textVariant transition-colors group-hover:text-text group-focus-visible:text-text"
