--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -177,16 +177,21 @@ if (pageTitle === "Trevor Tyler Lee") {
       >
         <nav class="mb-16 flex w-full flex-col gap-6 py-4">
           <div class="flex items-center justify-between">
-            <a
-              href="/"
-              class="group cursor-default rounded bg-white p-2 text-xs font-semibold text-neutral-900 shadow-sm ring-1 ring-inset ring-neutral-950/15 hover:ring-neutral-950/25 focus-visible:ring-neutral-950/25 dark:bg-white/5 dark:text-white dark:ring-white/10 dark:hover:ring-white/25 dark:focus-visible:ring-white/25 sm:p-1"
-              aria-label="Homepage"
-            >
-              <Icon
-                name="home"
-                class="size-6 text-textVariant transition-colors group-hover:text-text group-focus-visible:text-text"
-              />
-            </a>
+            {
+              !onIndex && (
+                <a
+                  href="/"
+                  class="group grid size-[40px] cursor-default place-content-center rounded bg-white text-sm font-semibold text-neutral-900 shadow-sm ring-1 ring-inset ring-neutral-950/15 hover:ring-neutral-950/25 focus-visible:ring-neutral-950/25 dark:bg-white/5 dark:text-white dark:ring-white/10 dark:hover:ring-white/25 dark:focus-visible:ring-white/25 sm:size-[32px] sm:text-base"
+                  aria-label="Homepage"
+                >
+                  <Icon
+                    name="uturn"
+                    class="text-textVariant transition-colors group-hover:text-text group-focus-visible:text-text"
+                  />
+                </a>
+              )
+            }
+            {onIndex && <div />}
             <ThemeToggle client:load />
           </div>
           {
