--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ const buildTime = new Date().toISOString();
 ---
 
 <footer
-  class="flex flex-col items-baseline justify-between pb-4 pt-16 text-xs sm:flex-row sm:pt-24"
+  class="flex flex-col items-baseline justify-between pb-4 pt-16 text-sm sm:flex-row sm:pt-24"
 >
   <div class="text-textVariant">
     © Copyright {new Date().getFullYear()}, Trevor Lee. <a
