--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -181,13 +181,10 @@ if (pageTitle === "Trevor Tyler Lee") {
               !onIndex && (
                 <a
                   href="/"
-                  class="group grid size-[40px] cursor-default place-content-center rounded bg-white text-sm font-semibold text-neutral-900 shadow-sm ring-1 ring-inset ring-neutral-950/15 hover:ring-neutral-950/25 focus-visible:ring-neutral-950/25 dark:bg-white/5 dark:text-white dark:ring-white/10 dark:hover:ring-white/25 dark:focus-visible:ring-white/25 sm:size-[32px] sm:text-base"
+                  class="grid size-[40px] cursor-default place-content-center rounded bg-white text-sm font-semibold text-neutral-900 shadow-sm ring-1 ring-inset ring-neutral-950/15 hover:ring-neutral-950/25 focus-visible:ring-neutral-950/25 dark:bg-white/5 dark:text-white dark:ring-white/10 dark:hover:ring-white/25 dark:focus-visible:ring-white/25 sm:size-[32px] sm:text-base"
                   aria-label="Homepage"
                 >
-                  <Icon
-                    name="uturn"
-                    class="text-textVariant transition-colors group-hover:text-text group-focus-visible:text-text"
-                  />
+                  <Icon name="uturn" class="text-text" />
                 </a>
               )
             }
