layout fixes for footer and marquee, load instagram logo eagerly

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ const buildTime = new Date().toISOString();
 ---
 
 <footer
-  class="flex flex-col items-baseline justify-between pb-4 pt-16 text-sm sm:flex-row sm:pt-24"
+  class="mx-auto flex max-w-screen-sm flex-col items-baseline justify-between bg-transparent pb-4 pt-24 text-sm dark:bg-black sm:flex-row"
 >
   <div class="text-textVariant">
     © Copyright {new Date().getFullYear()}, Trevor Lee. <a
