--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -115,6 +115,9 @@ const colorVariants = {
         src={instagram.icon}
         width={24}
         height={24}
+        format="avif"
+        quality="low"
+        loading="eager"
         alt="Instagram"
         class="size-3"
       />
