fix padding on footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ const buildTime = new Date().toISOString();
 ---
 
 <footer
-  class="mx-auto flex max-w-screen-sm flex-col items-baseline justify-between bg-transparent pb-4 pt-24 text-sm dark:bg-black sm:flex-row"
+  class="mx-auto flex max-w-screen-sm flex-col items-baseline justify-between bg-transparent px-3 pb-4 pt-24 text-sm dark:bg-black sm:flex-row sm:px-0"
 >
   <div class="text-textVariant">
     © Copyright {new Date().getFullYear()}, Trevor Lee. <a
