--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -47,7 +47,7 @@ const { Content } = await post.render();
       {
         post.data.lastModified && (
           <span class="text-sm text-textVariant">
-            • Last modified {formatDate(post.data.lastModified, "long")}
+            ⋆ Last modified {formatDate(post.data.lastModified, "long")}
           </span>
         )
       }
