add SuperWeb Themes

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -85,7 +85,7 @@ const colorVariants = {
     <div class="grid">
       <h1 class="text-lg font-medium">Trevor Tyler Lee</h1>
       <span class="-mt-2 text-sm text-textVariant"
-        >Frontend Developer <span class="text-lg">⋆</span> Vancouver, Canada</span
+        >Frontend Developer <span class="text-xs">✴︎</span> Vancouver, Canada</span
       >
     </div>
   </div>
