--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,6 +24,11 @@ const pageTitle = "Trevor Tyler Lee";
     <h2 class="pb-4 pt-12 text-lg font-medium text-textVariant">Projects</h2>
     <ul class="">
       <Project
+        description="Templates built with Astro + Tailwind CSS."
+        href="https://superwebthemes.com/"
+        title="SuperWeb Themes 🆕"
+      />
+      <Project
         description="Blog theme for Astro with search, comments, and zero frameworks."
         href="https://astro.build/themes/details/astro-micro/"
         title="Astro Micro 🔬"
